--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,6 +5,9 @@ apply plugin: 'java'
 
 repositories.jcenter()
 
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
+
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.7'
     testCompile 'junit:junit:4.11'
