--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -33,5 +33,7 @@ android {
 dependencies {
     compile project(':common')
     // compile fileTree(dir: 'libs', include: ['*.jar'])
-    // compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
 }
