--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:a="http://schemas.android.com/apk/res/android" package="eu.unipv.epsilon.enigma">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="eu.unipv.epsilon.enigma">
 
-    <application a:allowBackup="true" a:icon="@mipmap/ic_launcher" a:label="@string/app_name" a:theme="@style/AppTheme">
-        <activity a:name=".MainActivity" a:label="@string/title_activity_main">
+    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity" android:label="@string/title_activity_main">
             <intent-filter>
-                <action a:name="android.intent.action.MAIN"/>
-                <category a:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
