Now projects have their own build dir
See here: fdi2-epsilon/equests-gradle#2

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 ## Common
 .DS_Store
 
+## Project structure
+/build
+/*/build
+/levels/*/build
+
 ## Gradle
 /.gradle
-/build
 #/gradle
 #/gradlew
 #/gradlew.bat
