--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="eu.unipv.epsilon.enigma">
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="eu.unipv.epsilon.enigma">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:label="@string/title_activity_main">
+    <application
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+
+        <activity
+                android:name=".MainActivity"
+                android:label="@string/title_activity_main">
+
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity
+                android:name=".QuizActivity"
+                android:label="@string/title_activity_quiz"
+                android:parentActivityName=".MainActivity">
+
+            <!-- Parent activity, legacy 4.0 and lower support -->
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="eu.unipv.epsilon.enigma.MainActivity" />
+
+        </activity>
+
     </application>
 
 </manifest>
-
