--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -37,3 +37,16 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.android.support:cardview-v7:22.0.0'
 }
+
+// Evaluation of this project depends on each levels subproject,
+// so we can access its tasks.
+project(':levels').subprojects.each { evaluationDependsOn it.path }
+
+// Collect files to send to device
+task collectLevels(group: 'install', type: Copy) {
+    def levelProjects = project(':levels').subprojects
+
+    dependsOn levelProjects.collect { it.tasks.pack }
+    from levelProjects.collect { it.tasks.pack.archivePath }
+    into "$buildDir/adb-push/collections"
+}
