Post-merge fixes and collections plugin updated

--- a/levels/test-a/build.gradle
+++ b/levels/test-a/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'eu.unipv.epsilon:equests-gradle:0.4'
+        classpath 'eu.unipv.epsilon:equests-gradle:0.5'
     }
 }
 
@@ -16,6 +16,6 @@ apply plugin: 'enigma-levels'
 
 questCollection {
     name = 'First Collection'
-    //subtitle = 'What the hell?'
+    subtitle = 'What the hell?'
     description = '...and the computer caught up in fire in front of the paralyzed eyes of the team. <i>\"I am fat and I have a llama\"</i> said Vik, while the other guys tried to extinguish the fire.'
 }
