--- a/levels/test-b/build.gradle
+++ b/levels/test-b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'eu.unipv.epsilon:equests-gradle:0.4'
+        classpath 'eu.unipv.epsilon:equests-gradle:0.5'
     }
 }
 
@@ -16,6 +16,6 @@ apply plugin: 'enigma-levels'
 
 questCollection {
     name = 'Question!'
-    //subtitle = 'Rabbits 4ever'
+    subtitle = 'Rabbits 4ever'
     description = '<i>Lorem ipsum Lalo est</i>, rabbits run on red toilet paper leading to the green lawn.'
 }
