--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -33,9 +33,14 @@ android {
 dependencies {
     compile project(':common')
     // compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:recyclerview-v7:22.1.0'
     compile 'com.android.support:cardview-v7:22.1.0'
+}
+
+// Show deprecation message details
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:deprecation"
 }
 
 // Evaluation of this project depends on each levels subproject,
