Updated SLF4J dependencies

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,7 +9,8 @@ sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'org.yaml:snakeyaml:1.15'
     testCompile 'junit:junit:4.11'
+    testCompile 'org.slf4j:slf4j-simple:1.7.12'
 }
