--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:recyclerview-v7:22.1.0'
     compile 'com.android.support:cardview-v7:22.1.0'
+    compile 'org.slf4j:slf4j-android:1.7.12'
 }
 
 // Show deprecation message details
