--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
 
         </activity>
 
+        <activity
+                android:name=".ListActivity"
+                android:label="LIST-PROVA">
+
+        </activity>
+
     </application>
 
 </manifest>
