--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         package="eu.unipv.epsilon.enigma">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
