--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,6 +19,8 @@ gradle.projectsEvaluated {
     tasks.withType(JavaCompile) {
         // Suppress Sun internal proprietary API warnings because it's
         // not my fault if Java gives me classes implementing that...
+        options.fork = true
+        options.forkOptions.executable = 'javac'
         options.compilerArgs << '-XDignore.symbol.file'
     }
 }
