--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,21 @@
+repositories.jcenter();
+
+apply plugin: 'sonar-runner';
+if (!project.hasProperty('sonarHost')) ext.sonarHost = '197.0.0.1'
+if (!project.hasProperty('sonarPortHttp')) ext.sonarPortHttp = '9000'
+if (!project.hasProperty('sonarPortJdbc')) ext.sonarPortJdbc = '9092'
+
+sonarRunner {
+    sonarProperties {
+        // Put server path in ~/.gradle/gradle.properties or -PsonarHost=[...]
+        property 'sonar.host.url', "http://$sonarHost:$sonarPortHttp"
+        property "sonar.jdbc.url", "jdbc:h2:tcp://$sonarHost:$sonarPortJdbc/sonar"
+        if (project.hasProperty('sonarUser') && project.hasProperty('sonarPass')) {
+            property "sonar.jdbc.username", sonarUser
+            property "sonar.jdbc.password", sonarPass
+        }
+    }
+}
 
 allprojects {
     apply plugin: 'eclipse'
@@ -5,6 +23,20 @@ allprojects {
 
     //buildDir = "$rootProject.projectDir/build"
 }
+
+project(':android-app') {
+    sonarRunner {
+        sonarProperties {
+            // For directory tangle index, binaries should be analyzed too,
+            // but we have dex... - http://stackoverflow.com/a/20348653
+
+            property 'sonar.sources', android.sourceSets.main.java.srcDirs
+            //property 'sonar.tests', android.sourceSets.test.java.srcDirs
+        }
+    }
+}
+
+version = getCheckedOutCommitHash()
 
 task printGitHash << {
     println(getCheckedOutCommitHash())
