--- a/levels/starTrek/build.gradle
+++ b/levels/starTrek/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'java'
 apply plugin: 'enigma-levels'
 
 questCollection {
-    name = 'First Collection'
-    subtitle = 'What the hell?'
-    description = '...and the computer caught up in fire in front of the paralyzed eyes of the team. <i>\"I am fat and I have a llama\"</i> said Vik, while the other guys tried to extinguish the fire.'
+    name = 'Star Trek'
+    subtitle = 'The Original Serie'
+    description = 'Collezione di enigmi riguardo la serie classica di Star Trek'
 }
