--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+            android:name=".EnigmaApplication"
             android:allowBackup="true"
             android:supportsRtl="true"
             android:icon="@mipmap/ic_launcher"
