Review of "starTrek" collection of quizzes
Sadly quest-collection documents are actually required by the current version of equests-gradle

--- a/levels/pack-list.gradle
+++ b/levels/pack-list.gradle
@@ -1,4 +1,5 @@
 include 'levels:test-a',
         'levels:test-b',
         'levels:test-c',
-        'levels:test-d'
+        'levels:test-d',
+        'levels:starTrek'
