Initial work on a real rotating puzzle quiz... crashing

--- a/levels/pack-list.gradle
+++ b/levels/pack-list.gradle
@@ -1,5 +1,6 @@
-include 'levels:test-a',
+include 'levels:experiments',
+        'levels:starTrek',
+        'levels:test-a',
         'levels:test-b',
         'levels:test-c',
-        'levels:test-d',
-        'levels:starTrek'
+        'levels:test-d'
