--- a/levels/pack-list.gradle
+++ b/levels/pack-list.gradle
@@ -1,4 +1,5 @@
 include 'levels:experiments',
+        'levels:illness',
         'levels:starTrek',
         'levels:test-a',
         'levels:test-b',
