Let Gradle show detailed test failure info
I bet that's all about entries ordering in maps getString() or different implementations...
Also fixed a logical typo.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,12 @@ dependencies {
     testCompile 'org.slf4j:slf4j-simple:1.7.12'
 }
 
+test {
+    testLogging {
+        exceptionFormat = 'full'
+    }
+}
+
 gradle.projectsEvaluated {
     tasks.withType(JavaCompile) {
         // Suppress Sun internal proprietary API warnings because it's
